--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ckdh0799/python-app:${{ github.run_number }} .
+          docker build . --file build/Dockerfile -t ckdh0799/python-app:${{ github.run_number }} .
 
 
       - name: Push Docker image
