--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Build
-        uses: docker/setup-docker@v2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io
+          sudo systemctl start docker
+          sudo systemctl enable docker
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
