--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,11 +24,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         run: |
           docker buildx build . --file build/Dockerfile -t ckdh0799/python-app:${{ github.run_number }}
 
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/python-app:${{ github.run_number }}
+          docker push ckdh0799/python-app:${{ github.run_number }}
