--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,8 +22,8 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@43.204.96.32 << 'EOF'
             # Stop and remove the existing container if it exists
-            #docker stop python-appghactions || true
-            #docker rm python-appghactions || true
+            docker stop python-appghactions || true
+            docker rm python-appghactions || true
             
             # Run the new Docker container
             docker run -itd --name python-appghactions -p 6000:5000 ckdh0799/python-app:latest
